# SelectBooks

./: README  README.md
DuplicateBooksLocation/: CMakeLists.txt  duplicateBooksLocationProj.h  main.cpp
Logger_Lib/: CMakeLists.txt  Logger_Lib_global.h  logger_lib.cpp  logger_lib.h
Soundex/: CMakeLists.txt  main.cpp  soundexProj.h
elapsedTime_Lib/: CMakeLists.txt  elapsedTime_Lib_global.h  elapsedtime_Lib.cpp  elapsedtime_Lib.h
eniplicities/: CMakeLists.txt  eniplicitiesProj.h  main.cpp
errorCodeAndMsg_Lib/: CMakeLists.txt
errorCodeAndMsg_Lib/include/: errorCodeAndMsg_Lib.h  errorCodeAndMsg_LibProj.h  errorCodeAndMsg_Lib_global.h
errorCodeAndMsg_Lib/src/: errorCodeAndMsg_Lib.cpp
getExtensions/: CMakeLists.txt
getExtensions/include/: getExtensionsProj.h
getExtensions/src/: main.cpp
openFile_Lib/: CMakeLists.txt
openFile_Lib/include/: openFile_Lib.h  openFile_LibProj.h  openFile_Lib_global.h
openFile_Lib/src/: main.cpp  openFile_Lib.cpp
removeDuplicates2/: CMakeLists.txt  main.cpp  removeDuplicates2Proj.h
removePlural/: CMakeLists.txt
removePlural/include/: removePluralProj.h
removePlural/src/: main.cpp
selectBooks/: CMakeLists.txt
selectBooks/include/: constants.h  selectBooks.h  selectBooksProj.h
selectBooks/src/: constants.cpp  main.cpp  selectBooks.cpp  separateInTokens.txt
test03/: CMakeLists.txt  main.cpp  test03Proj.h
wordsOnly/: CMakeLists.txt  CMakeListsOld.txt
wordsOnly/include/: wordsOnlyProj.h
wordsOnly/src/: main.cpp  main0.cpp
